Update navbar links to point to correct pages

--- a/navbar.html
+++ b/navbar.html
@@ -21,7 +21,7 @@
         <!-- Menu Navbar -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
-                <li class="nav-item"><a class="nav-link text-dark" href="landing.html">BERANDA</a></li>
+                <li class="nav-item"><a class="nav-link text-dark" href="index.html">BERANDA</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-dark" href="#" id="profilDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">PROFIL</a>
                     <ul class="dropdown-menu" aria-labelledby="profilDropdown">
@@ -41,7 +41,6 @@
                         <li><a class="dropdown-item" href="/kematian.html">SURAT KEMATIAN</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a class="nav-link text-dark" href="galeri.html">GALERI</a></li>
                 <li class="nav-item"><a class="nav-link text-dark" href="informasi.html">INFORMASI PUBLIK</a></li>
             </ul>
         </div>
